--- a/php/web.config
+++ b/php/web.config
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-    <system.webServer>
-        <rewrite>
-            <rules>
-                <rule name="Rewrite to index.php">
-                    <match url="index.php|robots.txt|images|test.php" />
-                    <action type="None" />
-                </rule>
-                <rule name="Rewrite Index">
-                    <match url=".*" />
-                    <conditions>
-                        <add input="{REQUEST_FILENAME}" pattern="css|js|jpg|jpeg|png|gif|ico|htm|html" negate="true" />
-                    </conditions>
-                    <action type="Rewrite" url="index.php?url={R:1}" />
-                </rule>
-            </rules>
-        </rewrite>
-    </system.webServer>
+<system.webServer>
+<rewrite>
+ <rules>
+     <rule name="Main Rule" stopProcessing="true">
+         <match url=".*" />
+         <conditions logicalGrouping="MatchAll">
+             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+         </conditions>
+         <action type="Rewrite" url="index.php?url={R:0}" />
+     </rule>
+ </rules>
+</rewrite>
+</system.webServer>
 </configuration>
